tests/errors/sem.fficall-mismatch.return-type.or
main :: () -> void {
    lib :: (@load "dynlib.or").lib_t.{
        "decl",
        "asdasda.a",
    };

    @fficall lib, void, "something";
    @fficall lib, int, "something";
};
